--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sinon": "^1.10.3"
   },
   "dependencies": {
-    "phonemenon": "^1.1.0"
+    "phonemenon": "^1.2.0",
+    "seedrandom": "^2.3.11"
   }
 }
