--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "url": "https://github.com/jimkang/phoneme-sequencer/issues"
   },
   "homepage": "https://github.com/jimkang/phoneme-sequencer",
-  "devDependencies": {
-    "mocha": "~1.18.2",
-    "sinon": "^1.10.3"
-  },
+  "devDependencies": {},
   "dependencies": {
     "phonemenon": "^1.2.0",
     "probable": "^1.3.0",
-    "seedrandom": "^2.3.11"
+    "seedrandom": "^2.3.11",
+    "tape": "~3.5.0"
   }
 }
