--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "homepage": "https://github.com/jimkang/phoneme-sequencer",
   "devDependencies": {},
   "dependencies": {
-    "phonemenon": "^1.2.0",
+    "phonemenon": "~1.2.1",
     "probable": "^1.3.0",
     "seedrandom": "^2.3.11",
-    "tape": "~3.5.0"
+    "tape": "~3.5.0",
+    "phoneme-types": "~1.0.0",
+    "jsonfile": "~2.0.0",
+    "lodash": "~3.1.0"
   }
 }
