--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phoneme-sequencer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Generates phoneme sequences.",
   "main": "index.js",
   "scripts": {
@@ -24,12 +24,12 @@
   "homepage": "https://github.com/jimkang/phoneme-sequencer",
   "devDependencies": {},
   "dependencies": {
+    "jsonfile": "~2.0.0",
+    "lodash": "~3.1.0",
+    "phoneme-types": "^1.2.2",
     "phonemenon": "~1.2.1",
     "probable": "^1.3.0",
     "seedrandom": "^2.3.11",
-    "tape": "~3.5.0",
-    "phoneme-types": "~1.0.0",
-    "jsonfile": "~2.0.0",
-    "lodash": "~3.1.0"
+    "tape": "~3.5.0"
   }
 }
