--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "phoneme-sequencer",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Generates phoneme sequences.",
   "main": "index.js",
   "scripts": {
-    "test": "make test",
-    "postinstall": "cd node_modules/phonemenon && make phoneme-follow-frequencies-in-syllables.js"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
