--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jsonfile": "~2.0.0",
     "lodash": "~3.1.0",
     "phoneme-types": "^1.2.2",
-    "phonemenon": "~1.2.1",
+    "phonemenon": "^1.2.4",
     "probable": "^1.3.0",
     "seedrandom": "^2.3.11",
     "tape": "~3.5.0"
